top_errors
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
  File "/home/pavan/CACHEHITRATE/DNStop.py", line 42
    if(!result.find(dname[t1])):
       ^
SyntaxError: invalid syntax
